change name back to c.himes cecconi for space

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <DOCTYPE! html>
 <head>
-	<title>C.Himes Cecconi on the web</title>
+	<title>Calee A. Himes Cecconi on the web</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
 <script src="https://use.typekit.net/wjh0vkl.js"></script>
@@ -18,21 +18,17 @@
       
       <div id="about">
         <h2>hello.</h2>
-        <p>My name is Calee. I’m a recent Iowa-to-Minnesota transplant who geeks <a href="https://www.discogs.com/user/chimes/collection?page=1&sort=artist%2Casc&folder=0&limit=250" target="blank">music</a> and spends most of my spare time <a href="http://www.chimesdesign.com/blog/category/crafting/" target="blank">making things</a> and <a href="http://www.chimesdesign.com/blog/category/sweat/" target="blank">exploring outdoors</a>. I work and play in the fields I love most: <a href="http://chimesdesign.com/portfolio/fields/featured" target="blank">design</a> and <a href="http://www.chimesdesign.com/blog/category/write/" target="blank">writing</a>. I believe that design is more than just aesthetics; design is a story that has the ability to connect and transform our lives, and beautiful aesthetics are a side effect of good design. 
+        <p>My name is Calee. I’m a recent Iowa-to-Minnesota transplant who geeks <a href="https://www.discogs.com/user/chimes/collection?page=1&sort=artist%2Casc&folder=0&limit=250" target="blank">music</a> and spends most of my spare time <a href="http://www.chimesdesign.com/blog/category/crafting/" target="blank">making things</a> and <a href="http://www.chimesdesign.com/blog/category/sweat/" target="blank">exploring outdoors</a>. I work and play in the fields I love most: <a href="http://chimesdesign.com/portfolio/fields/featured" target="blank">design</a> and <a href="http://www.chimesdesign.com/blog/category/write/" target="blank">writing</a>. I believe that good design is more than just aesthetics; good design tells a story that connects us and transforms our lives. 
         </p>
       </div>
       <nav><h3>
         <a href="http://chimesdesign.com/portfolio/fields/featured">portfolio</a>
-        <a href="http://www.lifeplusrunning.com">blog</a>
+        <a href="http://www.chimesdesign.com/blog">blog</a>
         <a href="http://www.chimesdesign.com/chimes_CV.pdf" target="blank">cv</a>
         <a href="mailto:calee@chimesdesign.com">contact</a>
       </h3>
       </nav>
       <div id="social">
-        <a href="http://www.facebook.com/chimes" target="blank">
-          <img src="images/facebook.png"/></a>
-        <a href="http://www.twitter.com/chimes" target="blank">
-          <img src="images/twitter.png"/></a>
         <a href="http://www.instagram.com/thechimes" target="blank">
           <img src="images/instagram.png"/></a>
         <a href="http://www.pinterest.com/chimes" target="blank">
@@ -41,8 +37,12 @@
           <img src="images/lastFM.png"/></a>
         <a href="https://www.linkedin.com/in/chimes" target="blank">
           <img src="images/linkedin.png"/></a>
+		  <a href="http://www.facebook.com/chimes" target="blank">
+          <img src="images/facebook.png"/></a>
+        <a href="http://www.twitter.com/chimes" target="blank">
+          <img src="images/twitter.png"/></a>
       </article>
-         <footer>&copy; 2016 <a href="http://www.chimesdesign.com" target="blank">chimesdesign</a></footer>
+         <footer>&copy; 2018 <a href="http://www.chimesdesign.com" target="blank">chimesdesign</a></footer>
     </section>
 
 
